assets/css/app.scss
@import "normalize";
@import "variables";

@import url('https://fonts.googleapis.com/css?family=PT+Serif');
@import url('https://fonts.googleapis.com/css?family=Lato');

body {
  font-family: 'Lato', sans-serif;
  color: #444;
  line-height: 1.4;
}

h1, h2, h3, h4, h5, h6, .title {
  font-family: 'PT Serif', serif;

  small {
    opacity: .55;
  }
}

.container {
  width: 100%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

label {
  display: block;
  padding: .5em 0em;
}

input, button, textarea, select {
  font-family: inherit;
  font-size: 1;
  line-height: 1;
  padding: .25em .5em;
  border: 2px solid #eee;
  width: 100%;
  box-sizing: border-box;

  &:focus {
    outline: 0;
    border-color: #ccc;
  }
}

input[type="checkbox"] {
  width: auto;
}

button {
  margin-top: 1em;
  cursor: pointer;
  padding: .5em;
  width: auto;
}


.marquee {
  overflow: hidden;
  white-space: nowrap;
  border: 1px solid #ddd;

  $h: 2.5em;

  height: $h;
  line-height: $h;

  ul {
    margin: 0;
    padding: 0;

    li {
      list-style: none;
      display: inline-block;
      margin-left: 1em;
      margin-right: 1em;
    }
  }
}

#guild-logs {
  li {
    .date {
      font-weight: bold;
      font-style: italic;
      background: #ddd;
      font-size: .8em;
      padding: .25em .5em;
      letter-spacing: .1em;
    }

    .item, .upgrade {
      font-weight: bold;
    }
  }
}

#guild-stash, #guild-treasury {
  $s: 64px;

  ul {
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    max-width: 700px;

    li {
      display: block;
      width: $s;
      height: $s;
      background: #eee;
      margin: 3px;

      position: relative;

      span {
        position: absolute;
        width: $s;
        height: $s;
        display: block;
        top: 0;
        box-sizing: border-box;
        z-index: 99;

        &.item {
          border: 2px solid #cacaca;
          z-index: 9;
        }

        &.count {
          padding: .25em .5em;
          text-align: right;
          color: #fea;
          text-shadow: 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000, -1px 1px 0 #000;
        }
      }

      img {
        width: 100%;
        height: auto;
        box-sizing: border-box;
        display: block;
        position: relative;
      }
    }
  }
}

#guild-treasury {
  $s: 64px;
  $p: 12px;

  ul {
    max-width: 815px;

    li {
      height: calc(#{$s} + #{$p} + 3px);
      background: none;
      margin: 5px;
    }
  }

  .progress {
    display:block;
    height: $p;
    width: 100%;
    background: #f5cd79;
    position: absolute;
    top: calc(#{$s} + 3px);

    .current {
      height: 100%;
      background: darken( #f5cd79, 25%);
    }
  }

  li[data-complete="0"] {
    .count {
      display: none;
    }
    .progress {
      background: #e74c3c;
    }
  }

  li[data-complete="100"] {
    opacity: .33;

    .count {
      display: none;
    }

    .progress {
      background: #2ecc71;

      .current {
        display: none;
      }
    }
  }

  span {
    display:block;
  }
}

#guild-upgrades {
  .upgrade {
    margin-top: 3em;
  }

  h3 {
    // padding: .5em;
    // background: lighten(#f5cd79, 25%);
    line-height: 2em;
    margin-bottom: 0;

    img {
      height: 2em;
      vertical-align: top;
      vertical-align: middle;
      margin-right: .25em;
      border-radius: 3px;
      // margin-top: -.5em;
    }
  }

  ul.costs {
    padding: 0;
    list-style: none;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-left: 3em;

    li {
      padding: .75em .75em 0;
      padding-bottom: calc(.5em + 5px);
      position: relative;
      width: calc(100% / 2 - .5em);
      box-sizing: border-box;

      // Ellipsis
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      &::after {
        content: '';
        display: block;
        height: 5px;
        width: 100%;
        background: #f5cd79;
        bottom: 0;
        left: 0;
        position: absolute;
      }

      .current {
        position: absolute;
        bottom: 0;
        height: 5px;
        background: darken( #f5cd79, 25%);
        left: 0;
        z-index: 9;
      }

      &[data-complete="0"]::after {
        background: #e74c3c;
      }

      &[data-complete="100"] {
        opacity: .33;

        .current {
          background: #2ecc71;
        }
      }

      img {
        height: 1em;
        width: auto;
        vertical-align: bottom;
        border-radius: 3px;
      }
    }
  }
}


.currency {
  white-space:nowrap;

  > span {
    margin-right: .5em;

    &:last-of-type {
      margin-right: 0;
    }
  }
}

.item {
  &.border {
    &.rarity-Junk { border-color: $junk; }
    &.rarity-Basic { border-color: $basic; }
    &.rarity-Fine { border-color: $fine; }
    &.rarity-Masterwork { border-color: $masterwork; }
    &.rarity-Rare { border-color: $rare; }
    &.rarity-Exotic { border-color: $exotic; }
    &.rarity-Ascended { border-color: $ascended; }
    &.rarity-Legendary { border-color: $legendary; }
  }

  &.rarity-Junk { color: $junk; }
  &.rarity-Basic { color: $basic; }
  &.rarity-Fine { color: $fine; }
  &.rarity-Masterwork { color: $masterwork; }
  &.rarity-Rare { color: $rare; }
  &.rarity-Exotic { color: $exotic; }
  &.rarity-Ascended { color: $ascended; }
  &.rarity-Legendary { color: $legendary; }
}

header {
  border-top: 1em solid #f5cd79;
  height: 2.5em;
  border-bottom: 2px solid #ecf0f1;

  .container {
    display: flex;
    justify-content: space-between;
  }

  #logo {
    margin-top: -1.5em;
    height: 5em;
    display: flex;

    .site-title {
      line-height: 3.5em;
      font-size: 1.5em;
      font-weight: bold;
      font-family: 'PT Serif', serif;
      color: darken(#f5cd79, 33%);
    }

    img {
      width: 100%;
      height: auto;
      width: 5em;
    }
  }

  nav {
    height: 2.5em;
  }

  ul {
    margin: 0;
    padding: 0;
    height: 2.5em;
    line-height: 2.5em;

    li {
      display: inline-block;
      padding: 0 .75em;

      &.red {
        color: #e74c3c;
      }

      a {
        text-decoration: none;
        text-transform: uppercase;
        font-weight: bold;
        font-size: .8em;
        color: inherit;
      }
    }
  }
}

#guild-header {

  border-bottom: 2px solid #ecf0f1;
  text-align: center;

  #cover {
    background: url('../img/guild-header-bg.jpg') no-repeat bottom center;
    background-size: cover;
    padding: 5em 1em;

    h1 + p {
      margin-top: -.5em;
    }

    .guild-description {
      font-weight: bold;
      font-style: italic;
      font-size: 1.4em;
      max-width: 720px;
      margin-left: auto;
      margin-right: auto;
    }
  }

  #guild-links {
    padding: 0;
    
    li {
      display: inline-block;

      a {
        color: inherit;
      }
    }
  }

  nav {
    ul {
      padding: 0;
      list-style: none;

      li {
        display: inline-block;
        padding: 0 .75em;
        text-transform: uppercase;
        font-style: italic;

        a {
          color: inherit;
          text-decoration: none;
          font-style: normal;
          font-weight: bold;
        }
      }
    }
  }

}

#guild-logs-marquee {
  position: fixed;
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
  bottom: 0;
  width: 100%;
  left: 0;
  right: 0;
}

.flash-message {
  position: fixed;
  top: 80px;
  left: 0;
  right: 0;

  > div {
    max-width: 720px;
    margin-left: auto;
    margin-right: auto;
    padding: 1em 2em;
    text-align: center;
    color: #fff;
    position: relative;
    box-sizing: border-box;

    $green: #27ae60;
    $red: #c0392b;
    $blue: #2980b9;
    $orange: #f39c12;

    &.flash-danger {
      background: $red;
    }

    &.flash-success {
      background: $green;
    }

    &.flash-info {
      background: $blue;
    }

    &.flash-warning {
      background: $orange;
    }

    .flash-close {
      position: absolute;
      top: 0;
      right: 0;
      color: inherit;
      text-decoration: none;
      font-size: 1.5em;
      line-height: 1;
      padding: 0 .25em;
    }
  }
}

.facebook {
  color: #3b5998;
}

.twitter {
  color: #1da1f2;
}

.youtube {
  color: #ff0000;
}

.twitch {
  color: #6441a5;
}

.discord {
  color: #7289da;
}

